# 2026-03-05_geostats_ag

./: main.py  pyproject.toml
01_drillhole_data/: data_prep.ipynb  merge_drillhole_data.ipynb
10_modules/: data_exploration.py  dh_prep.py  eda.py  mesh.py  visualize.py
