[project]
name = "2026-03-05-geostats-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pdoc>=16.0.0",
    "pyperclip>=1.11.0",
    "pyvista>=0.47.1",
    "seaborn>=0.13.2",
    "trimesh>=4.11.4",
]
